--- a/src/app/components/driver-standings/driver-standings.component.scss
+++ b/src/app/components/driver-standings/driver-standings.component.scss
@@ -41,16 +41,18 @@ section {
       border-radius: 10px;
       height: 24vh;
 
-      .driver-number-container{
+      .driver-number-container {
         width: 20%;
         position: absolute;
         right: 12%;
-        h1{
-          
+
+        h1 {
+
           font-family: 'Orbitron';
           color: rgba(80, 80, 80, 0.7);
           font-size: 7em;
-            -webkit-text-stroke: 0.1px rgb(145, 145, 145); /* Umrandung */
+          -webkit-text-stroke: 0.1px rgb(145, 145, 145);
+          /* Umrandung */
 
         }
       }
@@ -154,11 +156,13 @@ section {
     justify-content: end;
     padding-bottom: 10px;
     padding-left: 10px;
-    .position{
-              font-family: 'Inter';
+
+    .position {
+      font-family: 'Inter';
     }
-    .driver-points{
-              font-family: 'Inter';
+
+    .driver-points {
+      font-family: 'Inter';
     }
   }
 }
@@ -215,15 +219,15 @@ app-driver-fullcard {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 91%;
-  height: 80vh;
+  width: 100%;
+  height: 100vh;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
   z-index: 9999;
 }
 
-.first-name{
+.first-name {
   font-family: 'Titillium Web';
-    text-shadow: 
+  text-shadow:
     0px 0 0px rgba(255, 255, 255, 0.203),
     2px 0 2px rgba(62, 62, 62, 0.5),
     3px 0 8px rgba(255, 255, 255, 0.3),
